--- a/.github/workflows/publishAzureFunction.yml
+++ b/.github/workflows/publishAzureFunction.yml
@@ -1,17 +1,46 @@
-name: CI
 
-on: [push]
+# Action Requires
+# 1. Setup the AZURE_CREDENTIALS secrets in your GitHub Repository
+# 2. Replace PLEASE_REPLACE_THIS_WITH_YOUR_FUNCTION_APP_NAME with your Azure function app name
+# 3. Add this yaml file to your project's .github/workflows/
+# 4. Push your local project to your GitHub Repository
+
+name: Windows_PowerShell_Workflow
+
+on:
+  push:
+    branches:
+    - master
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
+  build-and-deploy:
+    runs-on: windows-latest
     steps:
-    - uses: actions/checkout@v1
-    - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+    - name: 'Checkout GitHub Action'
+      uses: actions/checkout@master
+
+    # If you want to use publish profile credentials instead of Azure Service Principal
+    # Please comment this 'Login via Azure CLI' block
+    - name: 'Login via Azure CLI'
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - name: 'Run Azure Functions Action'
+      uses: Azure/functions-action@v1
+      id: fa
+      with:
+        app-name: PLEASE_REPLACE_THIS_WITH_YOUR_FUNCTION_APP_NAME
+        # If your function app project is not located in your repository's root
+        # Please consider prefixing the project path in this package parameter
+        package: '.'
+        # If you want to use publish profile credentials instead of Azure Service Principal
+        # Please uncomment the following line
+        # publish-profile: ${{ secrets.SCM_CREDENTIALS }}
+
+    #- name: 'use the published functionapp url in upcoming steps'
+    #  run: |
+    #    echo "${{ steps.fa.outputs.app-url }}"
+
+# For more information on GitHub Actions:
+#   https://help.github.com/en/categories/automating-your-workflow-with-github-actions
