--- a/.github/workflows/publishAzureFunction.yml
+++ b/.github/workflows/publishAzureFunction.yml
@@ -30,7 +30,7 @@ jobs:
       uses: Azure/functions-action@v1
       id: fa
       with:
-        app-name: PLEASE_REPLACE_THIS_WITH_YOUR_FUNCTION_APP_NAME
+        app-name: helloworldpsazfn
         # If your function app project is not located in your repository's root
         # Please consider prefixing the project path in this package parameter
         package: '.'
